--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Auditoria consultoria y asistencia tecnica</h1>
-<p>Proyecto 3</p>
+<div id="reg_form" class="bg_form">
+	<h1>Auditoria consultoria y asistencia tecnica</h1>
+	<p>Proyecto 3</p>
+</div>
