Create sample data file

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
 <div class="container">
-  <p class="text-center white">Andres Diaz - Michel Martinez - Ivan Martinez</p>
+  <p class="text-center">Andres Diaz - Michel Martinez - Ivan Martinez</p>
 </div>
