--- a/app/views/evaluation_types/edit.html.erb
+++ b/app/views/evaluation_types/edit.html.erb
@@ -1,8 +1,8 @@
 <div id="reg_form" class="bg_form">
 	<h1>Editar Tipo de Evaluacion</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Mostrar', @evaluation_type, class: "btn btn-primary btn_form" %> |
-<%= link_to 'Atras', evaluation_types_path, class: "btn btn-primary btn_form" %>
+	<%= link_to 'Mostrar', @evaluation_type %> |
+	<%= link_to 'Atras', evaluation_types_path %>
 </div>
