--- a/app/views/evaluation_types/new.html.erb
+++ b/app/views/evaluation_types/new.html.erb
@@ -1,7 +1,7 @@
 <div id="reg_form" class="bg_form">
-<h1>Nuevo Tipo de Evaluacion</h1>
+	<h1>Nuevo Tipo de Evaluacion</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Atras', evaluation_types_path, class: "btn btn-primary btn_form" %>
+	<%= link_to 'Atras', evaluation_types_path %>
 </div>
