--- a/app/views/user_states/edit.html.erb
+++ b/app/views/user_states/edit.html.erb
@@ -1,10 +1,8 @@
 <div id="reg_form" class="bg_form">
-<h1>Editar estado de usuario</h1>
+	<h1>Editar Estado de Usuario</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-
-
-<%= link_to 'Mostrar', @user_state %> |
-<%= link_to 'Atras', user_states_path %>
+	<%= link_to 'Mostrar', @user_state %> |
+	<%= link_to 'Atras', user_states_path %>
 </div>
