--- a/app/views/user_states/index.html.erb
+++ b/app/views/user_states/index.html.erb
@@ -1,5 +1,5 @@
 <div id="reg_form" class="bg_form">
- <h1>Estados de usuario</h1>
+  <h1>Listado Estados de usuario</h1>
   <table>
     <tr>
       <th>Nombre</th>
@@ -16,6 +16,6 @@
     </tr>
   <% end %>
   </table>
-<hr>
-<%= link_to 'Ingresar Nuevo', new_user_state_path, class: "btn btn-primary btn_form" %>
+  <hr>
+  <%= link_to 'Ingresar Nuevo', new_user_state_path, class: "btn btn-primary btn_form" %>
 </div>
