--- a/app/views/user_states/new.html.erb
+++ b/app/views/user_states/new.html.erb
@@ -1,7 +1,7 @@
-<div id="reg_	form" class="bg_form">
-<h1>Crear estado de usuario </h1>
+<div id="reg_form" class="bg_form">
+	<h1>Nuevo Estado de Usuario </h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Atras', user_states_path %>
+	<%= link_to 'Atras', user_states_path %>
 </div>
