--- a/app/views/user_states/show.html.erb
+++ b/app/views/user_states/show.html.erb
@@ -1,13 +1,12 @@
 <div id="reg_form" class="bg_form">
- <h1>Estados de usuario</h1>
-<p id="notice"><%= notice %></p>
+	<h1>Estado de usuario</h1>
 
-<p>
-  <b>Nombre:</b>
-  <%= @user_state.name %>
-</p>
-<hr>
+	<p>
+	  <b>Nombre:</b>
+	  <%= @user_state.name %>
+	</p>
+	<hr>
 
-<%= link_to 'Editar', edit_user_state_path(@user_state) %> |
-<%= link_to 'Atras', user_states_path %>
+	<%= link_to 'Editar', edit_user_state_path(@user_state) %> |
+	<%= link_to 'Atras', user_states_path %>
 </div>
