--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,4 +1,4 @@
-<div style="position:absolute; top:35%; right:5%; z-index:100;">
+<div style="position:absolute; top:15%; z-index:100; width: 200px; right: 5%;">
 	<% flash.each do |name, msg| %>
 	  <% if msg.is_a?(String) %>
 	    <div class="alert alert-<%= name == :notice ? "success" : "error" %>">
