--- a/app/views/formularies/_form.html.erb
+++ b/app/views/formularies/_form.html.erb
@@ -12,10 +12,10 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.label :name,"Nombre",:class => "label_form"%><br />
+    <%= f.text_field :name,:class => "text_field_form" %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Guardar", class: "btn btn-primary btn_form" %>
   </div>
 <% end %>
