--- a/app/views/formularies/edit.html.erb
+++ b/app/views/formularies/edit.html.erb
@@ -1,6 +1,8 @@
+<div id="reg_form" class="bg_form">
 <h1>Editing formulary</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @formulary %> |
-<%= link_to 'Back', formularies_path %>
+<%= link_to 'Mostrar', @formulary %> |
+<%= link_to 'Atras', formularies_path %>
+</div>
