--- a/app/views/formularies/index.html.erb
+++ b/app/views/formularies/index.html.erb
@@ -1,23 +1,21 @@
-<h1>Listing formularies</h1>
-
+<div id="reg_form" class="bg_form">
+<h1>Formularios</h1>
 <table>
   <tr>
-    <th>Name</th>
+    <th>Nombre</th>
     <th></th>
     <th></th>
     <th></th>
   </tr>
-
 <% @formularies.each do |formulary| %>
   <tr>
     <td><%= formulary.name %></td>
-    <td><%= link_to 'Show', formulary %></td>
-    <td><%= link_to 'Edit', edit_formulary_path(formulary) %></td>
-    <td><%= link_to 'Destroy', formulary, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Mostrar', formulary %></td>
+    <td><%= link_to 'Editar', edit_formulary_path(formulary) %></td>
+    <td><%= link_to 'Eliminar', formulary, method: :delete, data: { confirm: '¿Estas Seguro?' } %></td>
   </tr>
 <% end %>
 </table>
-
 <br />
-
-<%= link_to 'New Formulary', new_formulary_path %>
+<%= link_to 'Nuevo Formulario', new_formulary_path, class: "btn btn-primary btn_form" %>
+</div>
