--- a/app/views/formularies/new.html.erb
+++ b/app/views/formularies/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New formulary</h1>
+<div id="reg_form" class="bg_form">
+<h1>Nuevo Formulario</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', formularies_path %>
+<%= link_to 'Atras', formularies_path %>
+</div>
