correccion tipo evaluacion tipo componentes

--- a/app/views/component_types/edit.html.erb
+++ b/app/views/component_types/edit.html.erb
@@ -4,5 +4,5 @@
 <%= render 'form' %>
 
 <%= link_to 'Mostrar', @component_type %> |
-<%= link_to 'Atras', component_types_path %>
+<%= link_to 'Regresar', component_types_path %>
 </div>
