--- a/app/views/component_types/show.html.erb
+++ b/app/views/component_types/show.html.erb
@@ -1,5 +1,5 @@
 <div id="reg_form" class="bg_form">
-<p id="notice"><%= notice %></p>
+
 <h1>Tipo de Componente</h1>
 <p>
   <b>Nombre:</b>
@@ -13,5 +13,5 @@
 
 
 <%= link_to 'Editar', edit_component_type_path(@component_type) %> |
-<%= link_to 'atras', component_types_path %>
+<%= link_to 'Regresar', component_types_path %>
 </div>
