--- a/app/views/evaluation_types/edit.html.erb
+++ b/app/views/evaluation_types/edit.html.erb
@@ -4,5 +4,5 @@
 	<%= render 'form' %>
 
 	<%= link_to 'Mostrar', @evaluation_type %> |
-	<%= link_to 'Atras', evaluation_types_path %>
+	<%= link_to 'Regresar', evaluation_types_path %>
 </div>
