--- a/app/views/evaluation_types/show.html.erb
+++ b/app/views/evaluation_types/show.html.erb
@@ -7,5 +7,5 @@
 	</p>
 
 	<%= link_to 'Editar', edit_evaluation_type_path(@evaluation_type) %> |
-	<%= link_to 'Atras', evaluation_types_path %>
+	<%= link_to 'Regresar', evaluation_types_path %>
 </div>
