--- a/app/views/evaluation_types/new.html.erb
+++ b/app/views/evaluation_types/new.html.erb
@@ -3,5 +3,5 @@
 
 	<%= render 'form' %>
 
-	<%= link_to 'Atras', evaluation_types_path %>
+	<%= link_to 'Regresar', evaluation_types_path %>
 </div>
