--- a/app/views/formularies/show.html.erb
+++ b/app/views/formularies/show.html.erb
@@ -1,8 +1,7 @@
 
 <div id="reg_form" class="bg_form">
-<p id="notice"><%= notice %></p>
 <p>
-  <b>Name:</b>
+  <b>Nombre:</b>
   <%= @formulary.name %>
 </p>
 <hr>
