--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,7 +8,7 @@
         <%= render 'error_messages' %>
 
         <%= f.label :nombre, :class => "label_form" %>
-        <%= f.text_field :name, :class => "text_field_form" %>
+        <%= f.text_field :name, :class => "text_field_form", :required => true%>
 
         <%= f.label :email, :class => "label_form" %>
         <%= f.text_field :email, :class => "text_field_form" %>
