--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,5 @@
 <div id="reg_form" class="bg_form">
 	<h1>Auditoria consultoria y asistencia tecnica</h1>
+	<h1>para comites de la cadena ganadera</h1>
 	<p>Proyecto 3</p>
 </div>
