--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,5 +15,5 @@
   <% end %>
 
   <hr>
-  <%= link_to 'Nuevo usuario', new_user_path %>
+  <%= link_to 'Nuevo usuario', new_user_path, class: "btn btn-primary btn_form" %>
 </div>
