--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,5 +1,10 @@
 <div id="reg_form" class="bg_form">
   <h1>Cliente</h1>
+
+  <% if !@client.image_url(:show).to_s.blank? %>
+    <p><%= image_tag @client.image_url(:show).to_s %></p>
+  <% end %>
+
   <p>
     <b>Nombre:</b>
     <%= @client.name %>
@@ -43,11 +48,6 @@
   <p>
     <b>Objetivos:</b>
     <%= @client.objectives %>
-  </p>
-
-  <p>
-    <b>Imagen:</b>
-    <%= @client.image %>
   </p>
 
   <p>
