--- a/app/views/formularies/_form.html.erb
+++ b/app/views/formularies/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :name,"Nombre",:class => "label_form"%><br />
-    <%= f.text_field :name,:class => "text_field_form" %>
+    <%= f.text_field :name,:class => "text_field_form", :required => true %>
   </div>
   <div class="actions">
     <%= f.submit "Guardar", class: "btn btn-primary btn_form" %>
