--- a/app/views/user_types/_form.html.erb
+++ b/app/views/user_types/_form.html.erb
@@ -13,8 +13,8 @@
 
   <div class="field">
     <%= f.label :name, "Nombre", :class => "label_form" %><br />
-    <%= f.text_field :name, :class => "text_field_form" %>
-  </div>
+    <%= f.text_field :name, :class => "text_field_form", :required => true %>
+  </div>s
   <div class="field">
     <%= f.label :description, "Descripcion", :class => "label_form" %><br />
     <%= f.text_field :description, :class => "text_field_form" %>
