--- a/app/views/client_users/index.html.erb
+++ b/app/views/client_users/index.html.erb
@@ -20,11 +20,17 @@
     <td><%= client_user.exit_date %></td>
     <td><%= client_user.user_state_id %></td>
     <td><%= link_to 'Mostrar', client_user %></td>
+    <% if can? :update, User %>
     <td><%= link_to 'Editar', edit_client_user_path(client_user) %></td>
+    <% end %>
+    <% if can? :destroy, User %>
     <td><%= link_to 'Eliminar', client_user, method: :delete, data: { confirm: '¿Esta seguro?' } %></td>
+    <% end %>
   </tr>
 <% end %>
 </table>
 <hr>
+<% if can? :create, User %>
 <%= link_to 'Nueva relacion', new_client_user_path, class: "btn btn-primary btn_form" %>
+<% end %>
 </div>
