--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,6 +12,9 @@
 		    <%= f.label :email, :class => "label_form" %>
 		    <%= f.text_field :email, :class => "text_field_form" , :required => true %>
 
+        <%= f.label :image, 'Imagen', :class => "label_form" %>
+        <%= f.file_field :image, :class => "text_field_form" %>
+
 		    <%= f.label :telefono, :class => "label_form" %>
 		    <%= f.text_field :phone, :class => "text_field_form"  %>
 
