--- a/app/views/client_users/index.html.erb
+++ b/app/views/client_users/index.html.erb
@@ -1,23 +1,25 @@
 <div id="reg_form" class="bg_form">
-<h1>Relacion clientes usuarios</h1>
+  <h1>Relacion clientes usuarios</h1>
   <% @client_users.each do |client_user| %>
-  <div>
-    <p><%= client_user.user_id %></p>
-    <p><%= client_user.client_id %></p>
-    <p><%= client_user.entailment_date %></p>
-    <p><%= client_user.exit_date %></p>
-    <p><%= client_user.user_state_id %></p>
-    <p><%= link_to 'Mostrar', client_user %></p>
-    <% if can? :update, User %>
-    <p><%= link_to 'Editar', edit_client_user_path(client_user) %></p>
-    <% end %>
-    <% if can? :destroy, User %>
-    <p><%= link_to 'Eliminar', client_user, method: :delete, data: { confirm: '¿Esta seguro?' } %></p>
-    <% end %>
-  </div>
-<% end %>
-<hr>
-<% if can? :create, User %>
-<%= link_to 'Nueva relacion', new_client_user_path, class: "btn btn-primary btn_form" %>
-<% end %>
+    <div>
+      <p><%= client_user.user_id %></p>
+      <p><%= client_user.client_id %></p>
+      <p><%= client_user.entailment_date %></p>
+      <p><%= client_user.exit_date %></p>
+      <p><%= client_user.user_state_id %></p>
+      <p>
+        <%= link_to 'Mostrar', client_user %>
+        <% if can? :update, client_user %>
+          - <%= link_to 'Editar', edit_client_user_path(client_user) %>
+        <% end %>
+        <% if can? :destroy, client_user %>
+          - <%= link_to 'Eliminar', client_user, method: :delete, data: { confirm: '¿Esta seguro?' } %>
+        <% end %>
+      </p>
+    </div>
+  <% end %>
+  <hr>
+  <% if can? :create, ClientUser %>
+    <%= link_to 'Nueva relacion', new_client_user_path, class: "btn btn-primary btn_form" %>
+  <% end %>
 </div>
