--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,35 +1,35 @@
 <div id="reg_form" class="bg_form">
-<h1>Listado de Clientes</h1>
+  <h1>Listado de Clientes</h1>
+  <% @clients.each do |client| %>
+    <hr>
+    <div class="clients">
+     <% if !client.image_url(:thumb).to_s.blank? %>
+      <p><%= image_tag client.image_url(:thumb).to_s %></p>
+     <% end %>
 
-<% @clients.each do |client| %>
+      <p><%= client.name %></p>
+      <p><%= client.address %></p>
+      <p><%= client.email %></p>
+      <p><%= client.image %></p>
+      <p><%= client.web %></p>
+      <p><%= client.phone %></p>
+      <p><%= client.mission %></p>
+      <p><%= client.vision %></p>
+      <p><%= client.description %></p>
+      <p><%= client.objectives %></p>
+      <p><%= client.responsible_id %></p>
+      <p>
+        <%= link_to 'Mostrar', client %>
+        <% if can? :update, client %>
+          - <%= link_to 'Editar', edit_client_path(client) %>
+        <% end %>
+        <% if can? :destroy, client %>
+          - <%= link_to 'Eliminar', client, method: :delete, data: { confirm: '¿Esta seguro?' } %>
+        <% end %>
+    </div>
+  <% end %>
   <hr>
-  <div class="clients">
-   <% if !client.image_url(:thumb).to_s.blank? %>
-    <p><%= image_tag client.image_url(:thumb).to_s %></p>
-   <% end %>
-
-    <p><%= client.name %></p>
-    <p><%= client.address %></p>
-    <p><%= client.email %></p>
-    <p><%= client.image %></p>
-    <p><%= client.web %></p>
-    <p><%= client.phone %></p>
-    <p><%= client.mission %></p>
-    <p><%= client.vision %></p>
-    <p><%= client.description %></p>
-    <p><%= client.objectives %></p>
-    <p><%= client.responsible_id %></p>
-    <p><%= link_to 'Mostrar', client %>
-    <% if can? :update, User %>
-      <p><%= link_to 'Editar', edit_client_path(client) %></p>
-    <% end %>
-    <% if can? :destroy, User %>
-      <p><%= link_to 'Eliminar', client, method: :delete, data: { confirm: '¿Esta seguro?' } %></p>
-    <% end %>
-  </div>
-<% end %>
-<hr>
-<% if can? :create, User %>
-<%= link_to 'Nuevo Cliente', new_client_path, class: "btn btn-primary btn_form" %>
-<% end %>
+  <% if can? :create, Client %>
+    <%= link_to 'Nuevo Cliente', new_client_path, class: "btn btn-primary btn_form" %>
+  <% end %>
 </div>
