--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -55,8 +55,8 @@
     <%= @client.responsible_id %>
   </p>
   <hr>
-  <% if can? :update, User %>
-  <%= link_to 'Editar', edit_client_path(@client) %> |
+  <% if can? :update, @client %>
+    <%= link_to 'Editar', edit_client_path(@client) %> |
   <% end %>
   <%= link_to 'Regresar', clients_path %>
 </div>
