--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -26,6 +26,7 @@
 			      <span>Evaluacion</span>
 			    </a>
 			    <ul class="dropdown-menu">
+			    	<li><%= link_to "Evaluaciones", evaluations_path %></li>
 			    	<li><%= link_to "Formularios", formularies_path %></li>
 		        <li><%= link_to "Tipo Componentes", component_types_path %></li>
 		        <li><%= link_to "Tipo Evaluacion", evaluation_types_path %></li>
@@ -42,6 +43,7 @@
 			      <span>Evaluacion</span>
 			    </a>
 			    <ul class="dropdown-menu">
+			    	<li><%= link_to "Evaluaciones", evaluations_path %></li>
 			    	<li><%= link_to "Formularios", formularies_path %></li>
 		        <li><%= link_to "Tipo Componentes", component_types_path %></li>
 		        <li><%= link_to "Tipo Evaluacion", evaluation_types_path %></li>
