--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,7 +7,7 @@
 <div class="nav-collapse">
   <ul class="nav pull-right">
     <li><%= link_to "Inicio", root_path, :class => 'home_link' %></li>
-    <li><%= link_to "Contacto", root_path, :class => 'home_link' %></li>
+    <li><%= link_to "Contacto", contact_path, :class => 'home_link' %></li>
 		<% if signed_in? %>
 			<% if current_user.admin? %>
 				<li><%= link_to "Clientes", clients_path, :class => 'home_link' %></li>
