Add name to evaluations and fix '_form.html.erb' in all views

--- a/app/views/component_types/_form.html.erb
+++ b/app/views/component_types/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name, "Nombre",:class => "label_form"  %><br />
+    <%= f.label :name, "Nombre",:class => "label_form"  %>
     <%= f.text_field :name,:class => "text_field_form", :required => true %>
   </div>
   <div class="field">
-    <%= f.label :description, "Descripcion",:class => "label_form" %><br />
+    <%= f.label :description, "Descripcion",:class => "label_form" %>
     <%= f.text_field :description,:class => "text_field_form" %>
   </div>
   <div class="actions">
