--- a/app/views/evaluations/_form.html.erb
+++ b/app/views/evaluations/_form.html.erb
@@ -11,6 +11,9 @@
     </div>
   <% end %>
 
+  <%= f.label :name,"Nombre",:class => "label_form"%>
+  <%= f.text_field :name,:class => "text_field_form", :required => true %>
+
   <%= f.label :date, "Fecha",:class => "label_form" %>
   <%= f.datepicker :date, :class => "text_field_form" %>
 
