--- a/app/views/evaluations/show.html.erb
+++ b/app/views/evaluations/show.html.erb
@@ -2,6 +2,11 @@
   <h1>Evaluacion</h1>
 
 	<p>
+	  <b>Nombre:</b>
+	  <%= @evaluation.name %>
+	</p>
+
+	<p>
 	  <b>Fecha:</b>
 	  <%= @evaluation.date %>
 	</p>
