--- a/app/views/formularies/_form.html.erb
+++ b/app/views/formularies/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name,"Nombre",:class => "label_form"%><br />
+    <%= f.label :name,"Nombre",:class => "label_form"%>
     <%= f.text_field :name,:class => "text_field_form", :required => true %>
   </div>
   <div class="actions">
