--- a/app/views/client_users/_form.html.erb
+++ b/app/views/client_users/_form.html.erb
@@ -12,23 +12,23 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :user_id, "Usuario",:class => "label_form" %><br />
+    <%= f.label :user_id, "Usuario",:class => "label_form" %>
     <%= f.number_field :user_id, :class => "text_field_form" %>
   </div>
   <div class="field">
-    <%= f.label :client_id, "Cliente",:class => "label_form" %><br />
+    <%= f.label :client_id, "Cliente",:class => "label_form" %>
     <%= f.number_field :client_id, :class => "text_field_form" %>
   </div>
   <div class="field">
-    <%= f.label :entailment_date, "Fecha de vinculacion",:class => "label_form" %><br />
+    <%= f.label :entailment_date, "Fecha de vinculacion",:class => "label_form" %>
     <%= f.datepicker :entailment_date, :class => "text_field_form" %>
   </div>
   <div class="field">
-    <%= f.label :exit_date, "Fecha de salida",:class => "label_form" %><br />
+    <%= f.label :exit_date, "Fecha de salida",:class => "label_form" %>
     <%= f.datepicker :exit_date, :class => "text_field_form" %>
   </div>
   <div class="field">
-    <%= f.label :user_state_id, "Estado",:class => "label_form" %><br />
+    <%= f.label :user_state_id, "Estado",:class => "label_form" %>
     <%= f.number_field :user_state_id, :class => "text_field_form" %>
   </div>
   <div class="actions">
