add change user_type form and fix user_controller sign_in

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,7 @@
     <% end %>
     <hr>
     <% if can? :update, User %>
-    <%= link_to 'Editar Perfil', edit_user_path(@user) %>
+    <%= link_to 'Editar Perfil', edit_user_path(@user) %> |
     <% end %>
     <%= link_to 'Regresar', users_path %>
   </div>
